<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="4dp"
	android:paddingRight="4dp"
                android:id="@+id/folderFragmentLayoutId" >

    <ImageView
        android:id="@+id/folderFileImageId"
        android:scaleType="center"
        android:layout_width="60dp"
        android:layout_height="60dp"
...
        android:maxHeight="5dp"
        android:maxWidth="5dp"
        android:background="@color/view_not_in_focus"
		android:paddingRight="1dp" />

    <TextView
        android:id="@+id/fileNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/folderFileImageId"
        android:layout_toLeftOf="@+id/infoImageId"
...
