<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".HomeActivity">

    <item android:id="@+id/menuCreateFile"
        app:showAsAction="ifRoom"
        android:title="@string/menu_create_file"
        android:icon="@mipmap/ic_action_new" />
    
</menu>